# nugen

./: .gitignore  CMakeLists.txt  Makefile  README.md  WORKSPACE  build.sh  build.sh~  deploy.sh  discover.py  download-models.sh  libedgetpu_cc_rules.bzl  main.cc  workspace.bzl
coral_crosstool1/: BUILD  BUILD.tpl  WORKSPACE  cc_toolchain_config.bzl  configure.bzl  environ.bzl
example/: EdgeTpuInterpreterBuilder.cpp  EdgeTpuInterpreterBuilder.h  InterpreterBuilderInterface.cpp  InterpreterBuilderInterface.h  TfLiteInterpreter.cpp  TfLiteInterpreter.h  TfLiteInterpreterBuilder.cpp  TfLiteInterpreterBuilder.h  adapter.cc  adapter.h  bbox.h  classify.cc  detect.cc  edgeTpuInterpreterBuilder.h  main.cc  tfLiteInterpreter.cpp  tfLiteInterpreterBuilder.cpp
makefile_build/: Makefile
newpisetup/: build.sh
newpisetup/resources/: common-password  discovery.service  nugen.service  wpa_supplicant.conf
nzlogger/: nzlogger.cpp  nzlogger.h
picam/: camera_factory.cpp  camera_factory.h  camera_interface.h  fakecam.cpp  fakecam.h  picam.cpp  picam.h  picam.h~
tfhelper/: adapter.cc  edgeTpuInterpreterBuilder.cpp  interpreterBuilderInterface.cpp  tfLiteInterpreter.cpp  tfLiteInterpreter.h  tfLiteInterpreterBuilder.h
